WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305069
REGRESSION (
305166@main
): [ macOS ] http/tests/lists/list-new-parent-no-sibling-append.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=305069
Summary
REGRESSION (305166@main): [ macOS ] http/tests/lists/list-new-parent-no-sibli...
Qianlang Chen
Reported
2026-01-07 14:15:51 PST
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Flists%2Flist-new-parent-no-sibling-append.html
https://build.webkit.org/#/builders/1686/builds/1011
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-07 14:15:57 PST
<
rdar://problem/167718210
>
Radar WebKit Bug Importer
Comment 2
2026-01-07 14:16:24 PST
<
rdar://problem/167718368
>
Alexey Proskuryakov
Comment 3
2026-01-08 09:17:52 PST
<
rdar://problem/167718210
>
Qianlang Chen
Comment 4
2026-01-13 12:42:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56512
EWS
Comment 5
2026-01-14 16:41:43 PST
Committed
305619@main
(9ad018d8745a): <
https://commits.webkit.org/305619@main
> Reviewed commits have been landed. Closing PR #56512 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug